syntax = "proto3";

//  protoc *.proto \
//    --go_out=. \
//    --go_opt=paths=source_relative \
//    --proto_path=.
// or  protoc *.proto --go_out=./ --go-grpc_out=./
// protoc -I. --grpc-gateway_out . *.proto
package user;

option go_package="./userpb";

import "google/api/annotations.proto";

message RegisterRequest {
  string username = 1;
  string password = 2;
  string name = 3;
  string gender = 4;
  string email = 5;
}

message RegisterResponse{
  string status = 1;
}

message UserInfoRequest {
  int64 id = 1;
  string username = 2;
}

message UserInfoResponse {
  string username = 1;
  string password = 2;
  string name = 3;
  string gender = 4;
  string email = 5;
}

service UserService{
  rpc Register(RegisterRequest) returns (RegisterResponse){
    option (google.api.http) = {
      post: "/auth/register"
      body: "*"
    };
  }
  rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse){
    option (google.api.http) = {
      get: "/user/{id}"
    };
  }
  rpc GetUserDetail(UserInfoRequest) returns (UserInfoResponse){}
}